--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
 asgiref==3.5.2
+black==22.10.0
+click==8.1.3
+colorama==0.4.5
 Django==4.1.2
+django-filter==22.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.1
+Markdown==3.4.1
+mypy-extensions==0.4.3
+pathspec==0.10.1
 Pillow==9.2.0
+platformdirs==2.5.2
+psycopg2==2.9.4
+PyJWT==2.5.0
+python-decouple==3.6
+pytz==2022.4
 sqlparse==0.4.3
+tomli==2.0.1
 tzdata==2022.5
